--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,4 +4,8 @@ version = "0.1.0"
 description = "Extraire comme données structurées le programme de Kouskous 2025"
 readme = "README.md"
 requires-python = ">=3.12.0"
-dependencies = []
+dependencies = [
+    "requests>=2.31.0",
+    "pydantic>=2.0.0",
+    "dspy>=3.0.2",
+]
