--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,4 +8,19 @@ dependencies = [
     "requests>=2.31.0",
     "pydantic>=2.0.0",
     "dspy>=3.0.2",
+    "pdf2image>=1.17.0",
+    "tqdm>=4.66.0",
+    "mlflow>=2.8.0",
+    "python-dotenv>=1.0.0",
+    "pymupdf>=1.26.3",
+    "numpy>=2.3.2",
+    "matplotlib>=3.10.5",
+    "pikepdf>=9.10.2",
+]
+
+[project.optional-dependencies]
+viz = [
+    "matplotlib>=3.7.0",
+    "seaborn>=0.12.0",
+    "pandas>=2.0.0",
 ]
